--- a/package.json
+++ b/package.json
@@ -6,15 +6,25 @@
   "scripts": {
     "dev:landing": "pnpm --filter landing-page dev",
     "dev:booking": "pnpm --filter booking-app dev",
-    "build": "pnpm --recursive build",
-    "lint": "pnpm --recursive lint",
-    "lint:fix": "pnpm --recursive lint:fix"
+    "build": "turbo build",
+    "lint": "turbo lint",
+    "lint:fix": "turbo lint:fix"
   },
   "keywords": [],
   "author": "",
   "license": "UNLICENSED",
   "packageManager": "pnpm@9.15.0",
   "devDependencies": {
+    "@ianvs/prettier-plugin-sort-imports": "^4.4.0",
+    "@types/node": "^22.10.2",
+    "@typescript-eslint/eslint-plugin": "^8.18.0",
+    "@typescript-eslint/parser": "^8.18.0",
+    "eslint": "^8.57.1",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-react-hooks": "^5.1.0",
+    "prettier": "^3.4.2",
+    "prettier-plugin-tailwindcss": "^0.6.9",
     "tailwindcss": "^3.2.7",
     "turbo": "^2.3.3",
     "typescript": "^5.7.2"
