--- a/turbo.json
+++ b/turbo.json
@@ -18,6 +18,16 @@
         "dev": {
             "persistent": true,
             "cache": false
+        },
+        "lint": {
+            "dependsOn": [
+                "^lint"
+            ]
+        },
+        "lint:fix": {
+            "dependsOn": [
+                "^lint:fix"
+            ]
         }
     }
 }
