--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -16,6 +16,8 @@
     "pnpm": "^9.15.0"
   },
   "devDependencies": {
+    "@types/react": "^19.0.1",
+    "@types/react-dom": "^19.0.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwindcss": "^3.4.16",
