Jest setup and initial components

--- a/turbo.json
+++ b/turbo.json
@@ -28,6 +28,11 @@
             "dependsOn": [
                 "^lint:fix"
             ]
+        },
+        "test": {
+            "dependsOn": [
+                "^test"
+            ]
         }
     }
 }
