--- a/apps/landing-page/package.json
+++ b/apps/landing-page/package.json
@@ -17,17 +17,7 @@
   "license": "UNLICENSED",
   "dependencies": {
     "@practice-hub/common": "workspace:1.0.0",
-    "@types/react": "^19.0.1",
-    "@types/react-dom": "^19.0.2",
-    "next": "^15.1.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "sass": "^1.82.0",
-    "typescript": "^5.7.2"
+    "next": "^15.1.0"
   },
-  "devDependencies": {
-    "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.16"
-  }
+  "devDependencies": {}
 }
