--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -2,25 +2,30 @@
   "name": "@practice-hub/common",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint",
-    "lint:fix": "eslint --fix"
+    "lint:fix": "eslint --fix",
+    "test": "jest --config=../../jest.config.ts"
   },
   "keywords": [],
   "author": "",
   "license": "UNLICENSED",
   "dependencies": {
+    "date-fns": "^4.1.0",
     "npm": "^10.9.2",
     "pnpm": "^9.15.0"
   },
   "devDependencies": {
-    "@types/react": "^19.0.1",
-    "@types/react-dom": "^19.0.2",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "@testing-library/react": "^16.1.0",
     "tailwindcss": "^3.4.16",
     "typescript": "^5.7.2"
+  },
+  "peerDependencies": {
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "next": "^15",
+    "react": "^19",
+    "react-dom": "^19"
   }
 }
