--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -16,13 +16,14 @@
   },
   "devDependencies": {
     "@testing-library/react": "^16.1.0",
+    "class-variance-authority": "^0.7.1",
     "tailwindcss": "^3.4.16",
     "typescript": "^5.7.2"
   },
   "peerDependencies": {
+    "@types/node": "^22.10.2",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@types/node": "^22.10.2",
     "next": "^15",
     "react": "^19",
     "react-dom": "^19"
