--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build": "turbo build",
     "lint": "turbo lint",
     "lint:fix": "turbo lint:fix",
+    "check-types": "turbo check-types",
     "test": "turbo test"
   },
   "keywords": [],
